# rs-core-attempt

./: Cargo.toml  README.md
core/: Cargo.toml  build.rs
core-ebpf/: Cargo.toml  build.rs
core-ebpf-relo-helpers/: Cargo.toml  build.rs
core-ebpf-relo-helpers/src/: lib.rs
core-ebpf-relo-helpers/src/c/: relo_helpers.c  relo_helpers.h
core-ebpf/src/: main.rs
core/src/: main.rs
