[package]
name = "core-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
core-ebpf-relo-helpers = {path = "../core-ebpf-relo-helpers"}

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "core"
path = "src/main.rs"
